@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.1
 Date: ????
-  Changes:
+  Features:
+    - Add support to blacklist entities from being visualized.
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.0
 Date: 2023-10-15
